--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -348,7 +348,7 @@
   "reservation": {
     "title": "Book Appointment",
     "warningBanner": {
-      "title": "⚠️ Important Reservation Information",
+      "title": " Important Reservation Information",
       "cancelationPolicy": "You can cancel your reservation up to 4 hours before the appointment starts.",
       "confirmationTime": "You will receive confirmation within 2 hours of submission.",
       "arrivalTime": "Please arrive 5 minutes before your appointment time.",
@@ -383,11 +383,7 @@
       { "value": "lymfodrenaz", "label": "Lymphatic Drainage" }
     ],
     "schedule": {
-      "monday": "Monday: 9:00 - 18:00",
-      "tuesday": "Tuesday: 9:00 - 18:00", 
-      "wednesday": "Wednesday: 9:00 - 18:00",
-      "thursday": "Thursday: 9:00 - 18:00",
-      "friday": "Friday: 9:00 - 18:00",
+      "workingHours": "Monday - Friday: 9:00 - 18:00",
       "saturday": "Saturday: 9:00 - 16:00",
       "sunday": "Sunday: Closed"
     },
@@ -395,8 +391,7 @@
       "success": "Reservation submitted successfully! We will contact you soon.",
       "error": "There was an error submitting your reservation. Please try again.",
       "invalidDate": "Please select a valid date.",
-      "invalidTime": "Please select an available time.",
-      "closedDay": "We are closed on Sundays. Please select another day."
+      "invalidTime": "Please select an available time."
     }
   }
 } 
